--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "slash-options-builder",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "options for slash commands discord.js",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc --watch",
-    "test": "node test/index.js"
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "test": "node test/index.js",
+    "publish": "npm publish"
   },
   "files": [
     "lib"
@@ -20,9 +22,16 @@
   "repository": "https://github.com/arturoAtomplay/slashOptionsBuilder",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.5.2"
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.7.0"
   }
 }
